# eKom_test

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  test_db.json
api/: serializers.py  urls.py  views.py
config/: settings.py
tests/: test_api_views.py
